--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,9 +3,23 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'Drakalligro';
-  src: url('/fonts/Drakalligro.ttf') format('truetype');
+  font-family: 'CabinetGrotesk';
+  src: url('/fonts/CabinetGrotesk-Regular.ttf') format('truetype');
   font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'CabinetGrotesk';
+  src: url('/fonts/CabinetGrotesk-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'CabinetGrotesk';
+  src: url('/fonts/CabinetGrotesk-Bold.ttf') format('truetype');
+  font-weight: 700;
   font-style: normal;
 }
 
@@ -15,6 +29,7 @@
   font-weight: 400;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'UniviaPro';
   src: url('/fonts/UniviaPro-Italic.ttf') format('truetype');
@@ -46,4 +61,60 @@
   src: url('/fonts/UniviaPro-BoldItalic.ttf') format('truetype');
   font-weight: 700;
   font-style: italic;
+}
+
+@font-face {
+  font-family: 'Kanit';
+  src: url('/fonts/Kanit-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Kanit';
+  src: url('/fonts/Kanit-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Kanit';
+  src: url('/fonts/Kanit-Italic.ttf') format('truetype');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Kanit';
+  src: url('/fonts/Kanit-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Kanit';
+  src: url('/fonts/Kanit-MediumItalic.ttf') format('truetype');
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Kanit';
+  src: url('/fonts/Kanit-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Kanit';
+  src: url('/fonts/Kanit-BoldItalic.ttf') format('truetype');
+  font-weight: 700;
+  font-style: italic;
+}
+
+.bounce-animation {
+  animation: crescendo 0.8s alternate infinite ease-in;
+}
+
+@keyframes crescendo {
+  0%   {transform: scale(.95);}
+  100% {transform: scale(1);}
 }
